--- a/rulesOfDifferentiation/exercises/derivativeIntersectionOfTangentLines.tex
+++ b/rulesOfDifferentiation/exercises/derivativeIntersectionOfTangentLines.tex
@@ -57,7 +57,7 @@ First, the coordinates of the point $P$ are
 \[
 P=(0,\answer{0}).
 \]
-In oder to find to find an equation of this tangent line, we need to determine the slope, $m$.
+In order to find to find an equation of this tangent line, we need to determine the slope, $m$.
 \[
 m=f'(\answer{0})=\answer{1},
 \]
